# hamish-reads

./: AGENTS.md  README.md  config.yaml  pyproject.toml
.github/workflows/: daily-digest.yml
docs/: index.html
docs/css/: common.css  typography.css
docs/data/: cost_log.json  dates.json
docs/data/2026-03-27/: cost.json  papers.json  tweets.json
docs/data/2026-03-29/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-03-30/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-03-31/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-01/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-02/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-03/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-06/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-07/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-08/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-09/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-10/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-13/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-14/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-15/: cost.json  news.json  papers.json  tweets.json
docs/data/2026-04-16/: cost.json  news.json  papers.json  tweets.json
docs/js/: app.js
src/: arxiv_scanner.py  claude_ranker.py  data_writer.py  main.py  news_scanner.py  notion_client.py  twitter_scanner.py
(+44 files in other folders)
